[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/game/player_units/weapon.gd" type="Script" id=1]
[ext_resource path="res://src/game/object_area.gd" type="Script" id=2]
[ext_resource path="res://assets/gfx/game/spear.png" type="Texture" id=3]
[ext_resource path="res://tres/shapes/shape_sword_collision.tres" type="Shape2D" id=4]
[ext_resource path="res://tres/anim/weapon/weapon_strike_swing.anim" type="Animation" id=5]
[ext_resource path="res://src/game/vfx/vfx_weapon_particles.tscn" type="PackedScene" id=6]
[ext_resource path="res://tres/anim/weapon/weapon_strike_thrust.anim" type="Animation" id=7]
[ext_resource path="res://tres/anim/weapon/weapon_strike_wand_swing.anim" type="Animation" id=8]
[ext_resource path="res://tres/anim/weapon/weapon_idle_lower_back.anim" type="Animation" id=9]
[ext_resource path="res://tres/anim/weapon/weapon_hold_lower_back.anim" type="Animation" id=10]
[ext_resource path="res://tres/anim/weapon/weapon_idle_side.anim" type="Animation" id=11]
[ext_resource path="res://tres/anim/weapon/weapon_spear_throw.anim" type="Animation" id=12]
[ext_resource path="res://tres/anim/weapon/weapon_spear_idle.anim" type="Animation" id=13]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Sprite:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Sprite:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Sprite:offset:x")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("Sprite:offset:y")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( -8, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/7/type = "value"
tracks/7/path = NodePath("Sprite/VFXWeaponParticles:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Weapon" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
offset = Vector2( 0, -8 )

[node name="HitBox" type="Area2D" parent="Sprite"]
rotation = -1.49012e-08
scale = Vector2( 1, 1 )
collision_layer = 0
collision_mask = 16
script = ExtResource( 2 )
owner_path = NodePath("../..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/HitBox"]
position = Vector2( 0, -8 )
shape = ExtResource( 4 )
disabled = true

[node name="VFXWeaponParticles" parent="Sprite" instance=ExtResource( 6 )]
visible = false
position = Vector2( -1.41428, -18.3848 )
rotation = 2.35619
scale = Vector2( 0.4, 0.4 )
auto_free = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
method_call_mode = 1
anims/RESET = SubResource( 2 )
anims/weapon_hold_lower_back = ExtResource( 10 )
anims/weapon_idle_lower_back = ExtResource( 9 )
anims/weapon_idle_side = ExtResource( 11 )
anims/weapon_spear_idle = ExtResource( 13 )
anims/weapon_spear_throw = ExtResource( 12 )
anims/weapon_strike_swing = ExtResource( 5 )
anims/weapon_strike_thrust = ExtResource( 7 )
anims/weapon_strike_wand_swing = ExtResource( 8 )

[connection signal="area_entered" from="Sprite/HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
